kubernetes/prod/deployment-php.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-prod
  namespace: gestion-produits-prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: php-prod
  template:
    metadata:
      labels:
        app: php-prod
    spec:
      containers:
        - name: php-prod
          image: gregoiremouilleau/gestion-produits-php:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          volumeMounts:
            - name: uploads
              mountPath: /var/www/html/uploads
          livenessProbe:
            httpGet:
              path: /index.php
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /index.php
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: pvc-uploads
