kubernetes/prod/service-bdd.yml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: gestion-produits-prod
spec:
  selector:
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306
  type: ClusterIP
