kubernetes/prod/service-php.yml
apiVersion: v1
kind: Service
metadata:
  name: php-prod
  namespace: gestion-produits-prod
spec:
  selector:
    app: php-prod
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
