kubernetes/prod/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gestion-produits-ingress
  namespace: gestion-produits-prod
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - gestion-produits.local
      secretName: gestion-produits-tls
  rules:
    - host: gestion-produits.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: php-prod
                port:
                  number: 80
